--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "amd",
+    "moduleResolution": "node",
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "removeComments": true,
     "sourceMap": true
   },
   "include": [
-    "**/*"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
