--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jenny-database",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Generic database objects for use with jenny",
   "author": {
     "name": "Ryan Grady",
@@ -20,7 +20,7 @@
     "copyFiles": "copy README.md dist && copy package.json dist",
     "clearDist": "del dist\\*.* /s /q",
     "publish": "npm publish dist",
-    "compile": "tsc --module amd --moduleResolution node --outFile dist/jenny-database.js --declaration --listFiles"
+    "compile": "tsc --module amd --moduleResolution node --outFile dist/jenny-database.js --declaration --listFiles --skipLibCheck"
   },
   "dependencies": {
     "bluebird": "^3.4.6"
