--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "jenny-database",
-  "version": "0.6.0",
+  "version": "0.8.0",
   "description": "Generic database objects for use with jenny",
+  "main": "Table.js",
   "author": {
     "name": "Ryan Grady",
     "email": "ryan@angry-yard.com"
@@ -20,7 +21,7 @@
     "copyFiles": "copy README.md dist && copy package.json dist",
     "clearDist": "del dist\\*.* /s /q",
     "publish": "npm publish dist",
-    "compile": "tsc --module amd --moduleResolution node --outFile dist/jenny-database.js --declaration --listFiles --skipLibCheck"
+    "compile": "tsc --module commonjs --outDir dist --declaration --listFiles --skipLibCheck"
   },
   "dependencies": {
     "bluebird": "^3.4.6"
