--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "module": "amd",
-    "moduleResolution": "node",
+    "module": "commonjs",
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "removeComments": true,
+    "removeComments": false,
     "sourceMap": true
   },
   "include": [
